Implement verification functions mlenf() and msizef()
mlenf() computes the length of the buffer marshalled to, msizef()
computes the size of the structure marshalled from.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,8 @@ CFLAGS=-O2
 CC=c99
 
 memf.a: memf.a(memf.o) memf.a(freadf.o) memf.a(fwritef.o) \
-    memf.a(mreadf.o) memf.a(mwritef.o)
+    memf.a(mreadf.o) memf.a(mwritef.o) memf.a(msizef.o) \
+    memf.a(mlenf.o)
 
 clean:
 	rm -f *.o *.a
