Introduce first set of unit tests for parsefstr()
Also, fix some bugs in parsefstr() and document that we have unit tests.

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,9 +2,9 @@ LIB=memf.a
 CFLAGS=-O2
 CC=c99
 
-memf.a: memf.a(memf.o) memf.a(freadf.o) memf.a(fwritef.o) \
-    memf.a(mreadf.o) memf.a(mwritef.o) memf.a(msizef.o) \
-    memf.a(mlenf.o)
+$(LIB): $(LIB)(memf.o) $(LIB)(freadf.o) $(LIB)(fwritef.o) \
+    $(LIB)(mreadf.o) $(LIB)(mwritef.o) $(LIB)(msizef.o) \
+    $(LIB)(mlenf.o)
 
 clean:
 	rm -f *.o *.a
