--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,17 @@
-test:
-	@echo No testsuite yet!
+CC=c99
+CFLAGS=-O2 -L../src/ -I../src/
+TESTS=parsertest
+
+test: parsertest
+	@./parsertest
+
+.o:
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $< -lmemf
+
+.c:
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $< -lmemf
 
 clean:
+	rm -f *.o $(TESTS)
 
 .PHONY: test clean
