Alter API: Rename msizef and mlenf to sizef and lenf resp.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,8 +3,8 @@ CFLAGS=-O2
 CC=c99
 
 $(LIB): $(LIB)(memf.o) $(LIB)(freadf.o) $(LIB)(fwritef.o) \
-    $(LIB)(mreadf.o) $(LIB)(mwritef.o) $(LIB)(msizef.o) \
-    $(LIB)(mlenf.o) $(LIB)(fdreadf.o) $(LIB)(fdwritef.o)
+    $(LIB)(mreadf.o) $(LIB)(mwritef.o) $(LIB)(sizef.o) \
+    $(LIB)(lenf.o) $(LIB)(fdreadf.o) $(LIB)(fdwritef.o)
 
 clean:
 	rm -f *.o *.a
